# algorithmics-trading-strategies

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  main.py  pyproject.toml
src/: backtest.py  data.py  metrics.py  moomoo.py  strategy.py  utils.py
src/moving_avg_crossover_strategy/: __init__.py
